Improves shuffle functionality

--- a/fifteen.html
+++ b/fifteen.html
@@ -17,6 +17,7 @@
     <div id="puzzle_container">
       <!-- Implement JS code to fill this out -->
     </div>
+    <div id="win_notification">You Win!</div>
     <button id="shuffle">Shuffle</button>
     <p>
       American puzzle author and mathematician Sam Loyd is often falsely
