Modifies page layout after win

--- a/fifteen.html
+++ b/fifteen.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Fifteen Puzzle</h1>
-    <p>
+    <p id="description">
       The goal of the fifteen puzzle is to un-jumble its fifteen squares by
       repeatedly making moves that slide squares into the empty space. How
       quickly can you solve it?
