Adds all necessary functionality

--- a/fifteen.html
+++ b/fifteen.html
@@ -14,6 +14,13 @@
       repeatedly making moves that slide squares into the empty space. How
       quickly can you solve it?
     </p>
+    <select id="background_selector">
+      <option value="background1.jpg">Select Image</option>
+      <option value="background1.jpg">Background 1</option>
+      <option value="background2.jpg">Background 2</option>
+      <option value="background3.jpg">Background 3</option>
+      <option value="background4.jpg">Background 4</option>
+    </select>
     <div id="puzzle_container">
       <!-- Implement JS code to fill this out -->
     </div>
