--- a/fifteen.html
+++ b/fifteen.html
@@ -32,5 +32,22 @@
       his death in 1911 that he invented it. The puzzle was actually created
       around 1874 by Noyles Palmer Chapman, a postmaster in Canastota, New York.
     </p>
+
+    <div class="validators">
+      <a href="https://validator.w3.org/">
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Valid_XHTML_1.1.svg"
+          alt="Valid XHTML"
+        />
+      </a>
+      <a href="http://jigsaw.w3.org/css-validator/">
+        <img
+          style="border: 0; width: 88px; height: 31px"
+          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+          alt="Valid CSS!"
+        />
+      </a>
+    </div>
   </body>
 </html>
